# team-intelligence

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
db/: schema.sql
onboarding/: configure.py  credentials.env.example  onboard.py
plugins/adriana/.claude-plugin/: plugin.json
plugins/andreea/.claude-plugin/: plugin.json
plugins/anne/.claude-plugin/: plugin.json
plugins/anne/scripts/: ha_refuz_excel.py  ha_refuz_html.py  ha_refuz_retur.py  ha_refuz_trend.py
plugins/catalin/.claude-plugin/: plugin.json
plugins/catalin/scripts/: excel_api_push.py  kb_log.py
plugins/core/: guardrails.json
plugins/core/.claude-plugin/: plugin.json
plugins/core/commands/: db-to-excel.md  (+1 more)
shared/: CLAUDE.team.md  CS.md  HARTA.md  PROVISIONING.md  skills-audit.md
shared/apps/: blog-playbook.md  esteban.md  gt.md  labnoir.md  nubra.md
shared/etransport/: README.md  README_MEMORY.md  __init__.py  config.py  db.py  main.py  requirements.txt  utils_import_etransport_history.py  utils_import_smartbill_codes.py
shared/integrations/: microsoft-graph.md  shopify-arona-assistant.md
shared/scripturi-tools/: .gitignore  README.md  backup_profitdb.py  data_health.py  deploy.sh  deploy_parity.py  gads_upload_conversions.py  heartbeat.py  reconcile_sources.py  run_profit_sync.sh  sheets_labels.py  shopify_image_manager.py  shopify_tag_orders_parallel.py  sku_to_url.py  sync_barcodes.py  sync_raport_zilnic.py  tiktok_warehouse_sync.py  upload_shopify_img.py  wms_ad_spend_sync.py
(+578 files in other folders)
